Update errorprone to 2.9.0 and enable using it on java 16
Enabling <fork>true</fork> and setting the --add-exports= flags is
required on JDK 16 due to JEP 396: Strongly Encapsulate JDK Internals by
Default.

see https://errorprone.info/docs/installation
and https://openjdk.java.net/jeps/396

Change-Id: I03c257ffb48f429dd7d49a403d65c700abe133ca